// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerSupport should render page when logged in 1`] = `
<div>
  <div
    class="customerSupportSection gutter"
  >
    <div
      class="customerSupportSectionLeft"
    >
      <div
        class="customerSupportSectionLeftHeaderText"
      >
        Talk to a human
      </div>
      <div
        class="customerSupportHorizontalRule"
      >
        <lds-hr />
      </div>
      <div
        class="customerSupportSectionLeftSubheaderText"
      >
        If you have other questions about your medication, please contact us!
      </div>
    </div>
    <div
      class="customerSupportSectionRight"
    >
      <div
        class="customerSupportSectionPhone"
      >
        <img
          alt="PhoneIcon"
          data-nimg="1"
          decoding="async"
          height="37"
          loading="lazy"
          src="/icons/phone-icon.svg"
          style="color: transparent;"
          width="35"
        />
        <div
          class="customerSupportSectionPhoneText"
        >
          1-844-825-8966
        </div>
      </div>
      <div
        class="customerSupportSectionHours"
      >
        <img
          alt="HoursIcon"
          data-nimg="1"
          decoding="async"
          height="35"
          loading="lazy"
          src="/icons/purple-hours-icon.svg"
          style="color: transparent;"
          width="35"
        />
        <div
          class="customerSupportSectionHoursText"
        >
          Mon - Fri | 8:00 AM - 10:00 PM Eastern
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CustomerSupport should render the page when not logged in 1`] = `
<div>
  <div
    class="background"
  >
    <div
      class="customerSupportSignUpSection gutter"
    >
      <div
        class="customerSupportSignUpSectionHeader"
      >
        Let us assist you on your journey. Sign up on this website to
      </div>
      <div
        class="customerSupportSignUpSectionIconGroup"
      >
        <div
          class="customerSupportSignUpSectionIcon"
        >
          <img
            alt="CalendarIcon"
            data-nimg="1"
            decoding="async"
            height="60"
            loading="lazy"
            src="/icons/circle-calendar-icon.svg"
            style="color: transparent;"
            width="60"
          />
          <div
            class="customerSupportSignUpSectionText"
          >
            Personalize a calendar of your appointments
          </div>
        </div>
        <div
          class="customerSupportSignUpSectionIcon"
        >
          <img
            alt="CarePartnersIcon"
            data-nimg="1"
            decoding="async"
            height="60"
            loading="lazy"
            src="/icons/care-partners-icon.svg"
            style="color: transparent;"
            width="60"
          />
          <div
            class="customerSupportSignUpSectionText"
          >
            Assign care partners to assist you along your journey
          </div>
        </div>
        <div
          class="customerSupportSignUpSectionIcon"
        >
          <img
            alt="AppointmentRemindersIcon"
            data-nimg="1"
            decoding="async"
            height="60"
            loading="lazy"
            src="/icons/appointment-reminders-icon.svg"
            style="color: transparent;"
            width="60"
          />
          <div
            class="customerSupportSignUpSectionText"
          >
            Set up appointment reminders for you and your care partners
          </div>
        </div>
      </div>
      <button
        class="lds-button primary"
        data-testid="sign-up-button"
        type="button"
      >
        Sign up now
      </button>
    </div>
  </div>
  <div
    class="customerSupportSection gutter"
  >
    <div
      class="customerSupportSectionLeft"
    >
      <div
        class="customerSupportSectionLeftHeaderText"
      >
        Talk to a human
      </div>
      <div
        class="customerSupportHorizontalRule"
      >
        <lds-hr />
      </div>
      <div
        class="customerSupportSectionLeftSubheaderText"
      >
        If you have other questions about your medication, please contact us!
      </div>
    </div>
    <div
      class="customerSupportSectionRight"
    >
      <div
        class="customerSupportSectionPhone"
      >
        <img
          alt="PhoneIcon"
          data-nimg="1"
          decoding="async"
          height="37"
          loading="lazy"
          src="/icons/phone-icon.svg"
          style="color: transparent;"
          width="35"
        />
        <div
          class="customerSupportSectionPhoneText"
        >
          1-844-825-8966
        </div>
      </div>
      <div
        class="customerSupportSectionHours"
      >
        <img
          alt="HoursIcon"
          data-nimg="1"
          decoding="async"
          height="35"
          loading="lazy"
          src="/icons/purple-hours-icon.svg"
          style="color: transparent;"
          width="35"
        />
        <div
          class="customerSupportSectionHoursText"
        >
          Mon - Fri | 8:00 AM - 10:00 PM Eastern
        </div>
      </div>
    </div>
  </div>
</div>
`;
